# Nearcade

./: .gitignore  .gitmodules  AGENTS.md  NearsecTogether.desktop  README.de.md  README.es.md  README.fr.md  README.ja.md  README.md  README.pt.md  electron-main.js  electron-preload.js  electron-viewer-preload.js  extract-text.js  package-lock.json  package.json  release_backup.json  test_gamepad.js  translate.js  wrangler.jsonc
.github/workflows/: android-build.yaml  build-hm-bridge.yml  build-turn.yml  ios-unsigned.yml  publish-accent-color.yml  release.yml  translate.yaml
assets/: AcsiiArt.txt
assets/locales/: de.json  en.json  es.json  fr.json  index.json  ja.json  pt.json
config/: community-servers.json  community-turn-servers.json  controller-db-builder.html  controllers.json  kbm_bindings.json
dist-android/: gamepad-popup.html  index.html  viewer.html
dist-android/js/: p2p-signaler.js  server.js  viewer.js
drafts/: release-3.0.4.md
drafts/accent-color/: README.md  index.js  package.json  test.js
packaging/: README.md  update-hashes.sh
packaging/aur/: .SRCINFO  PKGBUILD
packaging/homebrew/: nearcade.rb
packaging/scoop/: nearcade.json
packaging/snap/: snapcraft.yaml
server/: Cargo.toml
server/src/: auth.rs  main.rs
src/css/: dashboard.css  host.css
src/docs/: GETTING_STARTED.md  VPS_SETUP.md
src/main/: config.js  ipc.js
src/pages/: coop-launcher.html  dashboard.html  gamepad-popup.html  host-custom.html  host-minimal.html  (+6 more)
vps/: Caddyfile  Cargo.toml  SETUP_HELP.md  deploy.sh  nearsec-router.service
vps/src/: main.rs
website/: _worker.js  arcade.js  build.sh  nearsec-arcade.html  nearsec-home.html
(+61 files in other folders)
