[package]
name = "nearcade-turn"
version = "1.0.0"
edition = "2021"
authors = ["Nearcade"]

[dependencies]
turn = "0.17.2"
stun = "0.17.2"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
webrtc-util = "0.17.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
